re #128: Fixed no scrollbar in com_config and com_admin

--- a/code/administrator/templates/default/css/component.css
+++ b/code/administrator/templates/default/css/component.css
@@ -46,7 +46,10 @@ div.message {
 	padding: 2px 0px 0px 0px;
 }
 
-
+.com_admin #content-box,
+.com_config #content-box {
+	overflow-y: scroll; /* Fix, force scrollbar */
+}
 
 /* com_content, com_sections */
 .com_sections div.title,
